####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2.0b1 (not released yet)
##############################

:Codename: ???
:2.2.0b1: ???

Compatibility Breaks
********************

* ``Repository.get_inventory_sha1()`` has been removed. (Jelmer Vernooij)

New Features
************

* If the Apport crash-reporting tool is available, bzr crashes are now
  stored into the ``/var/crash`` apport spool directory, and the user is
  invited to report them to the developers from there, either
  automatically or by running ``apport-bug``.  No information is sent
  without specific permission from the user.  (Martin Pool, #515052)

* Tree-shape conflicts can be resolved by providing ``--take-this`` and
  ``--take-other`` to the ``bzr resolve`` command. Just marking the conflict
  as resolved is still accessible via the ``--done`` default action.
  (Vincent Ladeuil)

Bug Fixes
*********

* Avoid infinite recursion when probing for apport.
  (Vincent Ladeuil, #516934)

* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy, https://wiki.ubuntu.com/UnitsPolicy.
  (Gordon Tyler, #514399)

Testing
*******

* New `bzrlib.tests.test_import_tariff` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.
  (Martin Pool)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.0 (not released yet)
############################

:Codename: 
:2.1.0: 

Bug Fixes
*********

* Don't require testtools to use sftp.
  (Vincent Ladeuil, #516183)

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

* Fix ``log`` to better check ancestors even if merged revisions are involved.
  (Vincent Ladeuil, #476293)

* Give a better error message when doing ``bzr bind`` in an already bound