@@ -14,6 +14,10 @@ bzr 2.2.0b1 (not released yet)
 Compatibility Breaks
 ********************
 
+* Deleted very old hidden commands ``versionedfile-list``,
+  ``weave-plan-merge``, ``weave-merge-text``.
+  (Martin Pool)
+
 * ``Repository.get_inventory_sha1()`` has been removed. (Jelmer Vernooij)
 
 New Features
